Name the class that could not be constructed when registering by class (#153)
translator(Class) and dispatcher(Class) construct the component themselves,
and every reflective failure arrived as a bare RuntimeException around the
reflective exception: no message, a stack trace naming neither the component
nor the reason, and a throwing constructor's own exception buried a cause
deeper still.

All four ways it can fail -- no no-argument constructor (the shape of a
component that has to be registered as an instance), one the framework cannot
reach, an abstract class or interface registered where an implementation was
meant, and a constructor that ran and threw -- are now IllegalArgumentException
like every other registration rejection on this builder, naming the class, the
kind and the remedy. A throwing constructor's own exception is the cause, not
the InvocationTargetException. The wording follows the eventstore's upcaster
instantiation, which is the same mistake one layer down.

RegisteringByClassTest pins the four plus the happy path; the two overloads now
document the rejection on the interface.


Claude-Session: https://claude.ai/code/session_01H6y7gbNsKV2Ap7wwNY8brj

Co-authored-by: Claude <noreply@anthropic.com>